# tcrpc

./: .gitignore  README.md  example.py  pyproject.toml
tcrpc/: decorator.py  generator.py  runner.py  types.py
tcrpc/templates/: fb.st.jinja2
tcrpc/tests/: dummy_script.py  test_decorator.py  test_generator.py  test_runner.py
